{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 209,
  "lineage": "2fbb2d14-a888-3cdf-767d-6ab694550043",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c8beac0f5248478",
            "domain": "vpc",
            "id": "eipalloc-04c8beac0f5248478",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-86-207-157.compute-1.amazonaws.com",
            "public_ip": "54.86.207.157",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:internet-gateway/igw-07c1fec6187954baa",
            "id": "igw-07c1fec6187954baa",
            "owner_id": "585247298056",
            "tags": {
              "Name": "VPC_DEV-Internet_Gateway"
            },
            "tags_all": {
              "Name": "VPC_DEV-Internet_Gateway"
            },
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c8beac0f5248478",
            "association_id": "eipassoc-06f94519b0a01f670",
            "connectivity_type": "public",
            "id": "nat-090784fbd64057f7d",
            "network_interface_id": "eni-059632f984f17eff8",
            "private_ip": "10.0.1.138",
            "public_ip": "54.86.207.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-061152e2024111acc",
            "tags": {
              "Name": "Nat"
            },
            "tags_all": {
              "Name": "Nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elasticip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ecf2d0c2fb067ef41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-090784fbd64057f7d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecf2d0c2fb067ef4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.elasticip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Public_subnet1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07c1fec6187954baa",
            "id": "r-rtb-03b055450d21bd3c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b055450d21bd3c9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "Public_subnet2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07c1fec6187954baa",
            "id": "r-rtb-03b055450d21bd3c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b055450d21bd3c9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:route-table/rtb-0ecf2d0c2fb067ef4",
            "id": "rtb-0ecf2d0c2fb067ef4",
            "owner_id": "585247298056",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC_DEV-Private_route_table"
            },
            "tags_all": {
              "Name": "VPC_DEV-Private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:route-table/rtb-03b055450d21bd3c9",
            "id": "rtb-03b055450d21bd3c9",
            "owner_id": "585247298056",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC_DEV-Public_route_table"
            },
            "tags_all": {
              "Name": "VPC_DEV-Public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Application_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de52f1144c891fe7",
            "route_table_id": "rtb-0ecf2d0c2fb067ef4",
            "subnet_id": "subnet-06cc765cdc6963008"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "Data_Base_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0f87d119efde316",
            "route_table_id": "rtb-0ecf2d0c2fb067ef4",
            "subnet_id": "subnet-0e8a3a3404b7ad1ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "Forntend_subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067d8e51148e636b8",
            "route_table_id": "rtb-0ecf2d0c2fb067ef4",
            "subnet_id": "subnet-09aab0e0e48514227"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Public_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4a3ded0526ea6fc",
            "route_table_id": "rtb-03b055450d21bd3c9",
            "subnet_id": "subnet-061152e2024111acc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "Public_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040891b8a08ddc693",
            "route_table_id": "rtb-03b055450d21bd3c9",
            "subnet_id": "subnet-07302efd7844c68f5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:security-group/sg-0b01fcc42335b1725",
            "description": "Enable http/https access on Port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b01fcc42335b1725",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB  Security Group",
            "name_prefix": "",
            "owner_id": "585247298056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Alb Security Group"
            },
            "tags_all": {
              "Name": "Alb Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:security-group/sg-09b5196339f854382",
            "description": "Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b5196339f854382",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b01fcc42335b1725"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Private Security Group",
            "name_prefix": "",
            "owner_id": "585247298056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Security Group"
            },
            "tags_all": {
              "Name": "Private Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.Alb-security-group",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:security-group/sg-04fccc3850412eba7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fccc3850412eba7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "585247298056",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Baiston SG"
            },
            "tags_all": {
              "Name": "Baiston SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Application_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:subnet/subnet-06cc765cdc6963008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cc765cdc6963008",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585247298056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_DEV-Application_subnet"
            },
            "tags_all": {
              "Name": "VPC_DEV-Application_subnet"
            },
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "Data_Base_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:subnet/subnet-0e8a3a3404b7ad1ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8a3a3404b7ad1ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585247298056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_DEV-Data_Base_subnet"
            },
            "tags_all": {
              "Name": "VPC_DEV-Data_Base_subnet"
            },
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "Forntend_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:subnet/subnet-09aab0e0e48514227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aab0e0e48514227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585247298056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_DEV-Forntend_subnet"
            },
            "tags_all": {
              "Name": "VPC_DEV-Forntend_subnet"
            },
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Public_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:subnet/subnet-061152e2024111acc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061152e2024111acc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585247298056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_DEV-Public_subnet1"
            },
            "tags_all": {
              "Name": "VPC_DEV-Public_subnet1"
            },
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "Public_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:subnet/subnet-07302efd7844c68f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07302efd7844c68f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585247298056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC_DEV-Public_subnet2"
            },
            "tags_all": {
              "Name": "VPC_DEV-Public_subnet2"
            },
            "vpc_id": "vpc-03d656142f10d2619"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585247298056:vpc/vpc-03d656142f10d2619",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083b3243d6cb67572",
            "default_route_table_id": "rtb-0a623cccdd13bb4a1",
            "default_security_group_id": "sg-0dc1b46fe757a3c50",
            "dhcp_options_id": "dopt-8a2e53f0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d656142f10d2619",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a623cccdd13bb4a1",
            "owner_id": "585247298056",
            "tags": {
              "Name": "VPC_DEV"
            },
            "tags_all": {
              "Name": "VPC_DEV"
            }
          }
        }
      ]
    }
  ]
}